Add ability to create spreadsheets directly from czar!
In the process, I better parameterized the constants that change when running different instances.

--- a/branches/rbragg/who.html
+++ b/branches/rbragg/who.html
@@ -30,6 +30,7 @@ td.focused { border: 1px solid #AAAAAA; }
 
 </style>
 
+<script language="JavaScript" src="config.js"></script>
 <script language="JavaScript" src="soundmanager2-nodebug-jsmin.js"></script>
 <script language="JavaScript" src="json2.js"></script>
 <script language="JavaScript" src="log.js"></script>
@@ -51,9 +52,7 @@ soundManager.onload = function() { };
 
 </head>
 
-<!-- body onLoad=Init('http://czar.emagino.net:433/mh2013') -->
-<!-- body onLoad=Init('http://squirrel.the4cs.com:5222/mh2011') -->
-<body onLoad=Init('http://localhost:8888/localtest')>
+<body onLoad=Init()>
 
 <div class=title>Who's Doing What
 <a style="font-size:50%" href=".">(Back to Czar)</a>
