Don't allow users that aren't logged in to create or edit puzzle names.  This should make it so that the cases where we don't properly create a sheet or update its name are very rare.
Also, verify that the authenticated user can access the shared folder, since otherwise their updates to Drive will fail.

--- a/branches/rbragg/index.html
+++ b/branches/rbragg/index.html
@@ -86,7 +86,7 @@ soundManager.onload = function() { };
 </div>
 <br clear=left>
 
-<button id=auth_button name=auth_button style="display: inline" onclick="handleAuthClick();">Authorize with Google to enter a new puzzle</button>
+<button id=auth_button name=auth_button style="display: inline" onclick="handleAuthClick();">Authenticate with Google to enter a new puzzle</button>
 <form id=create name=create style="margin-bottom: 10; display: none">
 <input type=text name=label size=30 style='font-weight: bold'>
 </form>
