--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ soundManager.onload = function() { };
 </div>
 <br clear=left>
 
-<button id=auth_button name=auth_button style="display: inline" onclick="handleAuthClick();">Authorize with Google to enter a new puzzle</button>
+<button id=auth_button name=auth_button style="display: inline" onclick="handleAuthClick();">Authenticate with Google to enter a new puzzle</button>
 <form id=create name=create style="margin-bottom: 10; display: none">
 <input type=text name=label size=30 style='font-weight: bold'>
 </form>
