Add a "current activity" status to the top of the Czar page, indicating any exclusive activity the user is currently assigned to.  This provides a visual warning to users that aren't currently assigned to anything.

--- a/branches/rbragg/index.html
+++ b/branches/rbragg/index.html
@@ -79,6 +79,8 @@ soundManager.onload = function() { };
     </select>
   </span>
   <br>
+  Current Activity: <span id="mystatus">Loading...</span>
+  <br><br>
   See also:
   <a target="huntpage" href="http://web.mit.edu/puzzle/www/">Puzzle Hunt site</a> (user:teamleftout pass:leftierthanthou),
   <a target="whopage" href="who.html">Who's doing what</a>,
