--- a/index.html
+++ b/index.html
@@ -79,12 +79,11 @@ soundManager.onload = function() { };
     </select>
   </span>
   <br>
-  Current Activity: <span id="mystatus">Loading...</span>
+  Current activity: <span id="mystatus">Loading...</span>
   <br><br>
   See also:
-  <a target="huntpage" href="http://web.mit.edu/puzzle/www/">Puzzle Hunt site</a> (user:teamleftout pass:leftierthanthou),
-  <a target="whopage" href="who.html">Who's doing what</a>,
-  <a target="needsahapage" href="https://docs.google.com/document/d/1s2w1td65BfU7XI9DBhGycwzZ1ajuyU-8wh-TdKT9cXg/edit">Needs Aha</a>.
+  <a id="hunt_url" href="">Hunt site</a> (<span id="hunt_info"></span>),
+  <a id="team_url" href="">Team site</a>
 </div>
 <br clear=left>
 
