--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@ soundManager.onload = function() { };
     </select>
   </span>
   <br>
-  <span id="mystatus">Loading...</span><br>
-  <span id="myjob"></span>
+  <span id="mystatus">Loading...</span>
   <br>
   See also:
   <a id="hunt_url" href="">Hunt site</a> (<span id="hunt_info"></span>),
