--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ soundManager.onload = function() { };
 <body onload="start_czar()">
 
 <img src=czar.jpeg style="float: left; margin-right: 10; margin-bottom: 15;">
-<span id="jobs" style="float: right; margin-left: 10;"></span><br>
+<div id=jobs style="float: right;"></div>
 <div style="margin-left: 10">
   <h2 style="margin-top: 0">Czar
   <a style="font-size:50%" href="who.html">(Back to Who)</a>
