--- a/trunk/index.html
+++ b/trunk/index.html
@@ -80,7 +80,7 @@ soundManager.onload = function() { };
     </select>
   </span>
   <br>
-  <span id="mystatus">Loading...</span>
+  <span id="mystatus"></span>
   <br>
   See also:
   <a id="hunt_url" href="">Hunt site</a> (<span id="hunt_info"></span>),
