Reduce the size of the hidden Flash object that we use to play sounds, so it doesn't look like we've got tons of empty space at the bottom of the screen on Czar and Who.

--- a/trunk/who.html
+++ b/trunk/who.html
@@ -28,7 +28,10 @@ td.focused { border: 1px solid #AAAAAA; }
   padding-bottom: 1ex;
 }
 
-
+#sm2-container {
+ width: 1px;
+ height: 1px;
+}
 </style>
 
 <script language="JavaScript" src="config.js"></script>
