--- a/who.html
+++ b/who.html
@@ -28,7 +28,10 @@ td.focused { border: 1px solid #AAAAAA; }
   padding-bottom: 1ex;
 }
 
-
+#sm2-container {
+ width: 1px;
+ height: 1px;
+}
 </style>
 
 <script language="JavaScript" src="config.js"></script>
