--- a/trunk/who.html
+++ b/trunk/who.html
@@ -154,7 +154,7 @@ Add activity: <input onchange="AddActivity(this);"><br>
       <li>You can rename any person or activity by clicking their name
 	  in the table.
       <li>New activities, new people, and changes in work assignments
-	  appear automatically.  The Update every minute checkbox is
+	  appear automatically.  The "Update every minute" checkbox is
 	  useful only to update the minutes-ago time in the table.
     </ul>
     </td>
@@ -217,20 +217,19 @@ Add activity: <input onchange="AddActivity(this);"><br>
 <ul>
   <li>Each row is an activity, each column a person.  Non-puzzle
       activities are orange.  Your name is yellow, if you've selected your
-      name on <a href="">czar</a>.
+      name on <a href="">Czar</a>.
   <li>Each cell shows when this person was last performing this
       activity.  It's hours and minutes.
-  <li>Marking one assignment as "current" (green) marks all other assignments
+  <li>Marking one assignment as "exclusive" (green) marks all other assignments
       as "no longer" (grey).  The exception are non-exclusive
-      assignments, shown in purple.  Choose "See advanced options" to
-      enable this feature.  Non-exclusive assignments for puzzles will
+      assignments, shown in purple.  Non-exclusive assignments for puzzles will
       be rare -- it would suggest you're actively working on more than
       one puzzle simultaneously.
   <li>At the two-hour mark, green starts "decaying" to red, turning
       into full red at 6 hours.  When someone starts losing their
       color, it means we haven't heard from them in a while.
   <li>Solved puzzles have a checkmark next to their names.  Anyone active
-      assignments on solved puzzles are shown in orange.
+      on solved puzzles are shown in orange.
 </ul>
 
 	</td>
