--- a/branches/rbragg/index.html
+++ b/branches/rbragg/index.html
@@ -34,6 +34,10 @@ span.tooltip {
   background: #FFF; border: 1px solid #888;
 }
 
+#sm2-container {
+ width: 1px;
+ height: 1px;
+}
 </style>
 <script language="JavaScript" src="config.js"></script>
 <script language="JavaScript" src="soundmanager2-nodebug-jsmin.js"></script>
