--- a/trunk/index.html
+++ b/trunk/index.html
@@ -87,8 +87,8 @@ soundManager.onload = function() { };
   <span id="mystatus"></span>
   <br>
   See also:
-  <a id="hunt_url" href="">Hunt site</a> (<span id="hunt_info"></span>),
-  <a id="team_url" href="">Team site</a>
+  <a id="hunt_url" target="_blank" href="">Hunt Site</a> (<span id="hunt_info"></span>),
+  <a id="team_url" target="_blank" href="">Team site</a>
 </div>
 <br clear=left>
 
