--- a/trunk/index.html
+++ b/trunk/index.html
@@ -72,7 +72,7 @@ soundManager.onload = function() { };
 <div id=jobs style="float: right;"></div>
 <div style="margin-left: 10">
   <h2 style="margin-top: 0">Czar
-  <a style="font-size:50%" href="who.html">(Back to Who)</a>
+  <a style="font-size:50%" href="who.html" target="_blank">(Back to Who)</a>
   </h2>
   <!-- id is "aaaaa" to make it sort before most users.  --->
   <span id='whoami.selector'>
