--- a/trunk/index.html
+++ b/trunk/index.html
@@ -34,11 +34,18 @@ span.tooltip {
   background: #FFF; border: 1px solid #888;
 }
 
+.ui-tooltip-content {
+  font-size: 60%;
+}
+
 #sm2-container {
  width: 1px;
  height: 1px;
 }
 </style>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
 <script language="JavaScript" src="config.js"></script>
 <script language="JavaScript" src="soundmanager2-nodebug-jsmin.js"></script>
 <script language="JavaScript" src="json2.js"></script>
