Modifications to who to fix z-index issues, etc.

--- a/trunk/who.html
+++ b/trunk/who.html
@@ -65,7 +65,7 @@ soundManager.onload = function() { };
 </div>
 
 <!-- The dialog that appears when you click on any person/puzzle cell. -->
-<div id=divUpdateWidget class=popup>
+<div id=divUpdateWidget class=popup style="z-index:100">
 Working on this activity...
 <table>
   <tr><td><button class=active id=btnExclusively style="width:120px">Exclusively</button></td>
