--- a/trunk/index.html
+++ b/trunk/index.html
@@ -91,7 +91,7 @@ console.log("config is ", config);
 
 </head>
 
-<body onload="start_czar()">
+<body onload="start_czar(false)">
 <div id="globalWrapper" style="width: 100%">
 <div id="globalPadding">
 
