--- a/trunk/index.html
+++ b/trunk/index.html
@@ -141,7 +141,7 @@ console.log("config is ", config);
 
 <!-- documentation goes here. --->
 
-<a href="http://m.czar.teamleftout.org/">Go to Czar for Mobile</a> | 
+<a href="mobile.html">Go to Czar for Mobile</a> | 
 <span id="showfaq" 
       style="cursor: pointer; color: blue; text-decoration: underline; display: inline;" 
       onclick="document.getElementById('faq').style.display='inline';
