--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ span.tooltip {
 <div id=jobs style="float: right; text-align: right"></div>
 <div style="margin-left: 10">
   <h2 style="margin-top: 0">Czar
-  <a style="font-size:50%" href="who.html" target="_blank">(Back to Who)</a>
+  <a style="font-size:50%" href="who.html" target="_blank">(Go to Who)</a>
   </h2>
   <!-- id is "aaaaa" to make it sort before most users.  --->
   <span id='whoami.selector'>
