--- a/who.html
+++ b/who.html
@@ -51,7 +51,7 @@ td.focused { border: 1px solid #AAAAAA; }
 <body onLoad=Init()>
 
 <div class=title>Who's Doing What
-<a style="font-size:50%" href=".">(Back to Czar)</a>
+<a style="font-size:50%" href=".">(Go to Czar)</a>
 </div>
 
 <!-- The dialog that appears when you click on any person/puzzle cell. -->
