--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <html>
 <head>
 <title>Czar</title>
+
+<!-- From realfavicongenerator.net -->
+<link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+<link rel="icon" type="image/png" href="/images/favicon-32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="/images/favicon-16x16.png" sizes="16x16">
+<link rel="manifest" href="/images/manifest.json">
+<link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="/images/favicon.ico">
+<meta name="msapplication-config" content="/images/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
+
 <style>
 body { margin: 0px; background: #FFFFFF; color: #000000; font: 100% sans-serif; }
 div#globalPadding { padding: 8px; }
@@ -70,7 +81,7 @@ span.tooltip {
 <div id="globalWrapper" style="width: 100%">
 <div id="globalPadding">
 
-<img src=czar.jpeg style="float: left; margin-right: 10; margin-bottom: 15;">
+<img src=images/czar_small.jpeg style="float: left; margin-right: 10; margin-bottom: 15;">
 <div id=jobs style="float: right; text-align: right"></div>
 <div style="margin-left: 10">
   <h2 style="margin-top: 0">Czar
