Use Web Notifications instead of pop-up boxes for notifying of puzzle solutions. (Also use them for job changes.)

--- a/mobile.html
+++ b/mobile.html
@@ -54,7 +54,7 @@ span.tooltip {
 <script language="JavaScript" src="cookie.js"></script>
 <script language="JavaScript" src="tags.js"></script>
 <script language="JavaScript" src="who-data.js"></script>
-<script language="JavaScript" src="notifications.js"></script>
+<script language="JavaScript" src="notifier.js"></script>
 <script language="JavaScript" src="czar.js"></script>
 <script language="JavaScript" src="googledocs.js"></script>
 
