--- a/who.html
+++ b/who.html
@@ -1,6 +1,17 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
-<html> <head>
-<title>who</title>
+<html><head>
+<title>Who (Czar)</title>
+
+<!-- From realfavicongenerator.net -->
+<link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+<link rel="icon" type="image/png" href="/images/favicon-32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="/images/favicon-16x16.png" sizes="16x16">
+<link rel="manifest" href="/images/manifest.json">
+<link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="/images/favicon.ico">
+<meta name="msapplication-config" content="/images/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
+
 <style>
 body { background: #FFFFFF; color: #000000; font: 100% sans-serif; }
 .active { background-color:#0f0; font-weight: normal; }
@@ -42,7 +53,7 @@ td.focused { border: 1px solid #AAAAAA; }
 <script language="JavaScript" src="cookie.js"></script>
 <script language="JavaScript" src="tags.js"></script>
 <script language="JavaScript" src="who-data.js"></script>
-<script language="JavaScript" src="notifications.js"></script>
+<script language="JavaScript" src="notifier.js"></script>
 <script language="JavaScript" src="who.js"></script>
 
 </head>
