Remove an apparently vestigial form field

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <meta name="msapplication-config" content="/images/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
 
+<!-- Improve the mobile experience -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <style>
 body { margin: 0px; background: #FFFFFF; color: #000000; font: 100% sans-serif; }
 div#globalPadding { padding: 8px; }
@@ -94,7 +97,6 @@ span.tooltip {
       <option id="whoami_sortkey_zzzzz" value="">Name not here?  Go to 'who'
       	and add yourself!</option>
     </select>
-    <input type="text" style="display:none" id="whatamidoing">
   </span>
   <br>
   <span id="mystatus"></span>
