minor text changes

--- a/mobile.html
+++ b/mobile.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Czar</title>
+<title>Czar Mobile</title>
 <style>
 
 body { margin: 0px; background: #FFFFFF; color: #000000; font: 100% sans-serif; }
