language= in <script> has been obsolete for a while

--- a/stateserver_inspector.html
+++ b/stateserver_inspector.html
@@ -27,8 +27,8 @@ td.modified {
 }
 
 </style>
-<script language="JavaScript" src="stateserver.js"></script>
-<script language="JavaScript">
+<script src="stateserver.js"></script>
+<script>
 
 var the_server = null;
 var the_log_buffer = null;
