--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@ span.tooltip {
 <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
 
-<script language="JavaScript" src="config.js"></script>
-<script language="JavaScript" src="stateserver.js"></script>
-<script language="JavaScript" src="cookie.js"></script>
-<script language="JavaScript" src="tags.js"></script>
-<script language="JavaScript" src="who-data.js"></script>
-<script language="JavaScript" src="notifier.js"></script>
-<script language="JavaScript" src="czar.js"></script>
-<script language="JavaScript" src="googledocs.js"></script>
+<script src="config.js"></script>
+<script src="stateserver.js"></script>
+<script src="cookie.js"></script>
+<script src="tags.js"></script>
+<script src="who-data.js"></script>
+<script src="notifier.js"></script>
+<script src="czar.js"></script>
+<script src="googledocs.js"></script>
 
 <!-- load Google APIs -->
 <script src="https://apis.google.com/js/client.js?onload=loadGoogleApis">
