--- a/who.html
+++ b/who.html
@@ -47,13 +47,13 @@ td.focused { border: 1px solid #AAAAAA; }
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
-<script language="JavaScript" src="config.js"></script>
-<script language="JavaScript" src="stateserver.js"></script>
-<script language="JavaScript" src="cookie.js"></script>
-<script language="JavaScript" src="tags.js"></script>
-<script language="JavaScript" src="who-data.js"></script>
-<script language="JavaScript" src="notifier.js"></script>
-<script language="JavaScript" src="who.js"></script>
+<script src="config.js"></script>
+<script src="stateserver.js"></script>
+<script src="cookie.js"></script>
+<script src="tags.js"></script>
+<script src="who-data.js"></script>
+<script src="notifier.js"></script>
+<script src="who.js"></script>
 
 </head>
 
