--- a/mobile.html
+++ b/mobile.html
@@ -48,18 +48,17 @@ span.tooltip {
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+
+<script src="https://apis.google.com/js/api.js" async defer></script>
+
 <script src="config.js"></script>
 <script src="stateserver.js"></script>
 <script src="cookie.js"></script>
 <script src="tags.js"></script>
 <script src="who-data.js"></script>
 <script src="notifier.js"></script>
+<script src="googleaccess.js"></script>
 <script src="czar.js"></script>
-<script src="googledocs.js"></script>
-
-<!-- load Google APIs -->
-<script src="https://apis.google.com/js/client.js?onload=loadGoogleApis">
-</script>
 
 </head>
 
