Added links to User Guide and Conventions to bottom of Czar This is kind of Left Out specific, maybe something smarter will be in a later version.

--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@ span.tooltip {
 <!-- documentation goes here. --->
 
 <a href="mobile.html">Go to Czar for Mobile</a> | 
+<a target="_blank" href="https://docs.google.com/document/d/18xMY9cfRnEOHqsfb8uLY7WYgq1uusCbu_7gZL3dCJNg">User's Guide</a> | 
+<a target="_blank" href="https://docs.google.com/document/d/1iYHQBKHyT7D4oRbIpBSGM6519gPtgSk4o56vKBk73oQ">Conventions</a> | 
 <span id="showfaq" 
       style="cursor: pointer; color: blue; text-decoration: underline; display: inline;" 
       onclick="document.getElementById('faq').style.display='inline';
