Updated video chat page based on feature requests
1) Turned off language detection as people were getting chinese/greek etc..
2) Set page title to new name.  Also set "Subject" to new name which changes name on the jitsi
3) Now starts all meetings with audio muted
4) Changed someon's name to "random puzzler" if they don't have a name cause why not?
5) added a favicon for video.
6) Turned off annoying chrome extension banner which sometimes pops up.

--- a/video_chat_room.html
+++ b/video_chat_room.html
@@ -1,8 +1,14 @@
 <html>
-<script src='https://meet.jit.si/external_api.js'></script>
-<h1 id="title">Video Chat Room</h1>
-<div id="meet"></div>
+<head>
+  <script src='https://meet.jit.si/external_api.js'></script>
+  <link rel="icon" type="image/png" href="images/video_favicon_32x32.png"/>
 
+</head>
+<body>
+<title id="title">Video Chat Room</title>
+<h1 id="header">Video Chat Room</h1>
+<div id="meet"></div>
+</body>
 
 
 <script>
@@ -10,9 +16,11 @@ const domain = 'meet.jit.si';
 const urlParams = new URLSearchParams(window.location.search);
 const room = urlParams.get('room_id');
 const name =  urlParams.get('name');
+
 const options = {
     roomName: room,
     parentNode: document.querySelector('#meet'),
+    configOverwrite: { startWithAudioMuted: true },
     interfaceConfigOverwrite: {
       TOOLBAR_BUTTONS: [
         'microphone', 'camera', 'closedcaptions', 'desktop',  'fullscreen',
@@ -20,14 +28,19 @@ const options = {
         'livestreaming', 'etherpad', 'sharedvideo', 'settings', 'raisehand',
         'videoquality', 'filmstrip',  'feedback', 'stats', 'shortcuts',
         'tileview', 'videobackgroundblur', 'download', 'help', 'mute-everyone',
-    ]
+    ], 
+    LANG_DETECTION: false,
+    DEFAULT_REMOTE_DISPLAY_NAME: "Random Puzzler",
+    SHOW_CHROME_EXTENSION_BANNER: false
   }
 
 };
 
+document.getElementById('header').innerHTML = name
 document.getElementById('title').innerHTML = name
 const api = new JitsiMeetExternalAPI(domain, options);
 api.executeCommand('toggleChat');
+api.executeCommand('subject', name);
 
 window.onunload = window.onbeforeunload = function() {
   const pid = urlParams.get('pid');
