--- a/video_chat_room.html
+++ b/video_chat_room.html
@@ -1,64 +1,58 @@
 <html>
 <head>
-  <script src='https://meet.jit.si/external_api.js'></script>
-  <link rel="icon" type="image/png" href="images/video_favicon_32x32.png"/>
-
+    <script src='https://meet.jit.si/external_api.js'></script>
+    <link rel="icon" type="image/png" href="images/video_favicon_32x32.png"/>
+    <title id="title">Video Chat Room</title>
 </head>
-<body>
-<title id="title">Video Chat Room</title>
-<h1 id="header">Video Chat Room</h1>
-<div id="meet"></div>
-</body>
 
+<body>
+    <h1 id="header">Video Chat Room</h1>
+    <div id="meet"></div>
+</body>
 
 <script>
 const domain = 'meet.jit.si';
 const urlParams = new URLSearchParams(window.location.search);
 const room = urlParams.get('room_id');
-const name =  urlParams.get('name');
+const name = urlParams.get('name');
 
-const options = {
+const jitsi_options = {
     roomName: room,
     parentNode: document.querySelector('#meet'),
     configOverwrite: { startWithAudioMuted: true },
     interfaceConfigOverwrite: {
-      TOOLBAR_BUTTONS: [
-        'microphone', 'camera', 'closedcaptions', 'desktop',  'fullscreen',
-        'fodeviceselection', 'hangup', 'profile',
-        'livestreaming', 'etherpad', 'sharedvideo', 'settings', 'raisehand',
-        'videoquality', 'filmstrip',  'feedback', 'stats', 'shortcuts',
-        'tileview', 'videobackgroundblur', 'download', 'help', 'mute-everyone',
-    ], 
-    LANG_DETECTION: false,
-    DEFAULT_REMOTE_DISPLAY_NAME: "Random Puzzler",
-    SHOW_CHROME_EXTENSION_BANNER: false
-  }
-
+        TOOLBAR_BUTTONS: [
+            'microphone', 'camera', 'closedcaptions', 'desktop',  'fullscreen',
+            'fodeviceselection', 'hangup', 'profile', 'livestreaming',
+            'etherpad', 'sharedvideo', 'settings', 'raisehand', 'videoquality',
+            'filmstrip',  'feedback', 'stats', 'shortcuts', 'tileview',
+            'videobackgroundblur', 'download', 'help', 'mute-everyone',
+        ], 
+        LANG_DETECTION: false,
+        DEFAULT_REMOTE_DISPLAY_NAME: "Random Puzzler",
+        SHOW_CHROME_EXTENSION_BANNER: false
+    }
 };
 
 document.getElementById('header').innerHTML = name
 document.getElementById('title').innerHTML = name
-const api = new JitsiMeetExternalAPI(domain, options);
+const api = new JitsiMeetExternalAPI(domain, jitsi_options);
 api.executeCommand('toggleChat');
 api.executeCommand('subject', name);
 
 window.onunload = window.onbeforeunload = function() {
-  const pid = urlParams.get('pid');
-  const uid = urlParams.get('uid');
-
-  if(pid && uid)
-    opener.set_puzzle_inactive(pid, uid)
+    const pid = urlParams.get('pid');
+    const uid = urlParams.get('uid');
+    if (pid && uid && opener && opener.set_puzzle_inactive)
+        opener.set_puzzle_inactive(pid, uid)
 }
 
 window.onload = function() {
-  const pid = urlParams.get('pid');
-  const uid = urlParams.get('uid');
-
-  if(pid && uid)
-    opener.set_puzzle_active(pid, uid)
+    const pid = urlParams.get('pid');
+    const uid = urlParams.get('uid');
+    if (pid && uid && opener && opener.set_puzzle_active)
+        opener.set_puzzle_active(pid, uid)
 }
 
 </script>
-
-
 </html>
