cosmetic improvements to video chat wrapper

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
-body { margin: 0px; background: #FFFFFF; color: #000000; font: 100% sans-serif; }
+body { margin: 0px; background: #FFFFFF; color: #000000; font-family: sans-serif; }
 div#globalPadding { padding: 8px; }
 div.internal { display: none; }
 
@@ -83,7 +83,7 @@ span.tooltip {
 <img src=images/czar_small.jpeg style="float: left; margin-right: 10; margin-bottom: 15;">
 <div id=jobs style="float: right; text-align: right"></div>
 <div style="margin-left: 10">
-  <h2 style="margin-top: 0">Czar
+  <h2 style="margin-top: 0; margin-bottom: 0.2em">Czar
   <a style="font-size:50%" href="who.html" target="_blank">(Go to Who)</a>
   </h2>
   <!-- id is "aaaaa" to make it sort before most users.  --->
