--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@ span.tooltip {
 
 <!-- documentation goes here. --->
 
+<button onclick="CopyToClipboard()">Copy to clipboard</button> | 
 <a href="mobile.html">Go to Czar for Mobile</a> | 
 <span id="showfaq" 
       style="cursor: pointer; color: blue; text-decoration: underline; display: inline;" 
